feat: AI attendance assistant with export center and miniprogram refresh
Add multi-country recognition, async Excel export, table UX improvements,
Feishu miniprogram TTML migration, change-password flow, and MySQL connection fixes.

Co-authored-by: Cursor <cursoragent@cursor.com>